--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 
 .navbar {
     margin-bottom: 0;
+    border-radius: 0;
 }
 
 .navbar-brand {
@@ -16,8 +17,19 @@
     margin-right: 10px;
 }
 
+.navbar-inverse .navbar-brand {
+    color: white;
+}
+.well {
+    border-radius: 0;
+}
+
 .btn {
     padding: 4px 8px;
+}
+
+label {
+    color: rgb(157, 157, 157);
 }
 
 select.input-sm, .input-sm {
